reg and login api done caps2

--- a/CAPS/caps2/backend/restaurant-management/src/main/resources/application.properties
+++ b/CAPS/caps2/backend/restaurant-management/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=restaurant-management
+
+
+# postgress config
+spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant_management
+spring.datasource.username=postgres
+spring.datasource.password=Akshat@123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# hibernate properties
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update 
+# Options: update | create | validate | none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+
