`Update java.configuration.updateBuildConfiguration to automatic in .vscode/settings.json`

--- a/CAPS/caps2/backend/restaurant-management/pom.xml
+++ b/CAPS/caps2/backend/restaurant-management/pom.xml
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>6.2.0.Final</version>  <!-- ✅ Stable version -->
+			<version>6.2.0.Final</version>  <!-- Stable version -->
 		</dependency>
 
 		
