--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "java.configuration.updateBuildConfiguration": "automatic",
     "java.format.settings.url": "eclipse-formatter.xml",
 
-    "liveServer.settings.root": "/CAPS/caps2/frontend"
+    "liveServer.settings.root": "JAVA/JAVA_AS2/frontend"
 }
